<resources>
    <string name="app_name">LoginForm</string>
    <string name="login_activity">Login Activity</string>
    <string name="login_instruction">Please enter your username and password below to login:</string>
    <string name="hint_username">Enter your username:</string>
    <string name="hint_password">Enter your password:</string>
    <string name="btn_login">LOGIN</string>
</resources>
